# World-IA-Finance

./: .gitignore  CLAUDE.md  README.md  demo.ipynb  pyproject.toml
configs/: strate_i.yaml  strate_i_binance.yaml  strate_ii.yaml  strate_iv.yaml
infra/: main.tf  outputs.tf  startup_ingest.sh  startup_training.sh  variables.tf
paper/: chaosai_paper.tex
scripts/: ablation_transformer_vs_mamba.py  analyze_tokens.py  convert_parquet_to_pt.py  convert_pt_to_arrayrecord.py  cross_validate_jax_pytorch.py  demo_results.py  demo_training_results.py  download_massive_data.py  gcp_ingest.py  generate_futures.py  generate_synthetic_data.py  ingest_binance.py  launch_h100.sh  launch_tpu_v6e.sh  precompute_trajectories.py  pretokenize.py  run_v5_local_dataprep.sh  scaling_ladder.sh  setup_gcp.sh  setup_msi.sh  sync_checkpoints_gcs.sh  sync_gcp.sh  sync_to_msi.sh  tpu_train_pipeline.sh  train_strate_i.py  train_strate_ii.py  train_strate_iv.py  train_v4_pipeline.sh  train_v5_pipeline.sh
src/common/: math_utils.py
src/jax_v6/: __init__.py  config.py  jepa.py  masking.py  types.py
src/strate_i/: codebook.py  config.py  decoder.py  encoder.py  fsq_codebook.py  lightning_module.py  losses.py  revin.py  spherical_vqvae.py  tokenizer.py
src/strate_ii/: config.py  encoder.py  jepa.py  lightning_module.py  mamba2_block.py  masking.py  multiverse.py  predictor.py  vicreg.py
tests/: test_codebook.py  test_jepa.py  test_latent_crypto_env.py  test_losses.py  test_mamba2_block.py  test_masking.py  test_revin.py  test_scale_invariance.py  test_spherical_vqvae.py  test_stochastic_predictor.py  test_vicreg.py
tpu_toolkit/: README.md  grain_pipeline.py  mxu_alignment.py  numerics.py  optimizer.py  replay_buffer.py  sharding.py  xla_flags.py
(+26 files in other folders)
