[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-ia"
version = "0.1.0"
description = "Financial IA - Latent Market Intelligence (Strates I-IV)"
authors = [{name = "Daniel"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "pytorch-lightning>=2.0",
    "tslearn>=0.6",
    "numpy",
    "pandas",
    "dacite",
    "pyyaml",
    "tensorboard",
    "einops",
    "gymnasium>=1.0",
    "stable-baselines3>=2.0",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
gcp = [
    "google-cloud-storage>=2.0",
    "google-cloud-logging>=3.0",
    "pyarrow>=14.0",
    "aiohttp>=3.9",
    "tqdm>=4.60",
    "requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
